add paragraph to commit

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident voluptatibus perspiciatis quos eaque eligendi quisquam nemo architecto. A, provident est eveniet cumque deleniti deserunt delectus, sed veniam inventore reiciendis earum.</h1>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat, incidunt?</p>
 </body>
 </html>
