--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 <body>
     <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident voluptatibus perspiciatis quos eaque eligendi quisquam nemo architecto. A, provident est eveniet cumque deleniti deserunt delectus, sed veniam inventore reiciendis earum.</h1>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat, incidunt?</p>
+    <ul>
+        <li>Home</li>
+        <li>About us</li>
+        <li>Cotact us</li>
+    </ul>
 </body>
 </html>
